overflow y fix

--- a/src/components/responsiveMenu/responsiveMenu.css
+++ b/src/components/responsiveMenu/responsiveMenu.css
@@ -9,7 +9,7 @@
 
   padding: 15px;
   position: fixed;
-  overflow-y: hidden;
+
   top: 55px;
   transition: 0.2s;
   box-shadow: 5px 5px 5px #13141b42;
